--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <groupId>org.kill-bill.billing.kaui</groupId>
     <artifactId>kaui-standalone</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
     <name>killbill-admin-ui-standalone</name>
     <url>http://github.com/killbill/killbill-admin-ui-standalone</url>
     <description>Standalone Kaui</description>
@@ -41,4 +41,8 @@
         <url>https://github.com/pierre/killbill-admin-ui-standalone/</url>
         <developerConnection>scm:git:git@github.com:pierre/killbill-admin-ui-standalone.git</developerConnection>
     </scm>
+    <properties>
+        <gpg.skip>true</gpg.skip>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+    </properties>
 </project>
