--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <groupId>org.kill-bill.billing.kaui</groupId>
     <artifactId>kaui-standalone</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.6</version>
+    <version>2.0.7-SNAPSHOT</version>
     <name>killbill-admin-ui-standalone</name>
     <url>http://github.com/killbill/killbill-admin-ui-standalone</url>
     <description>Standalone Kaui</description>
